Polish Java style and dependencies
Update vulnerable Jackson, Logback, and AssertJ versions plus the dependency-check plugin. Simplify recent Java changes with clearer ternary/switch expressions, simple imports, Commons helpers, and empty collection factories.